--- a/scss/_top_sections.scss
+++ b/scss/_top_sections.scss
@@ -23,7 +23,7 @@
     h4{
         display: inline-block;
     }
-    h4, button, input{
+    h4, button, input, select{
         margin: 0 10px ;
     }
     button{
@@ -49,3 +49,4 @@
         width: 320px;
     }
 }
+
