--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 //To do and archival lists
 @import "list_section";
 
+@import "select";
 //TO DO:
 // - dodać w JS zeby thick pojawiał się po najechaniu albo kliknięciu, a zadanie przenosiło się do done task po cwhili czasu
 // - usunąć rok z wypisania daty przy zadaniu
