--- a/scss/_list_section.scss
+++ b/scss/_list_section.scss
@@ -25,6 +25,16 @@
         background-color: $mywhite;
         .task{
             background-color: $light-beige;
+            //PRIORITIES
+        }
+        .priority-1{
+            background-color: $priority1;
+        }
+        .priority-2{
+            background-color: $priority2;
+        }
+        .priority-3{
+            background-color: $priority3;
         }
         h3{
             color: $light-beige;
