--- a/scss/style.css
+++ b/scss/style.css
@@ -15,6 +15,19 @@ textarea, select, input[type="date"], input[type="datetime"], input[type="dateti
   vertical-align: middle;
 }
 
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -ms-appearance: none;
+  border: none;
+  background-image: url("images/thick.png");
+}
+
+select::-ms-expand {
+  display: none;
+}
+
 .bg-img {
   z-index: -1;
   position: fixed;
@@ -92,7 +105,7 @@ input {
   outline: none;
 }
 
-input[type="text"], #in-date {
+input[type="text"], #in-date, select {
   background-color: transparent;
   border: 1px solid #f0e7d6;
   border-radius: 9px;
@@ -132,12 +145,21 @@ input[type="checkbox"].delete {
   height: 18px;
 }
 
+input[type='date'] {
+  width: 160px;
+}
+
+select {
+  width: 120px;
+}
+
 .alert {
   height: 30px;
   width: 300px;
   border-radius: 8px;
   margin: 0 auto;
   padding: 8px 0 0 0;
+  margin-bottom: 3px;
 }
 
 .warning {
@@ -184,7 +206,7 @@ input[type="checkbox"].delete {
   display: inline-block;
 }
 
-#add-section h4, #add-section button, #add-section input {
+#add-section h4, #add-section button, #add-section input, #add-section select {
   margin: 0 10px;
 }
 
@@ -243,6 +265,18 @@ input[type="checkbox"].delete {
 
 #list #left .task {
   background-color: #d7a474;
+}
+
+#list #left .priority-1 {
+  background-color: #ebbe86;
+}
+
+#list #left .priority-2 {
+  background-color: #d7a474;
+}
+
+#list #left .priority-3 {
+  background-color: #db7f49;
 }
 
 #list #left h3 {
@@ -328,5 +362,66 @@ input[type="checkbox"].delete {
   left: 16px;
   top: 8px;
   color: #e3d4c0;
+}
+
+/* The container must be positioned relative: */
+.custom-select {
+  position: relative;
+  font-family: Arial;
+}
+
+.custom-select select {
+  display: none;
+  /*hide original SELECT element: */
+}
+
+.select-selected {
+  background-color: DodgerBlue;
+}
+
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/* style the items (options), including the selected item: */
+.select-items div, .select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
+
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: DodgerBlue;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 /*# sourceMappingURL=style.css.map */
