Add media queries
Create queries.scss, add queries at points: 700px and 1000px, change flex to wrap in list-sectins, add-section, sorting-section.

--- a/scss/_list_section.scss
+++ b/scss/_list_section.scss
@@ -1,6 +1,7 @@
 
 #list{
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     margin: 20px;
     
@@ -25,9 +26,9 @@
         background-color: $mywhite;
         .sorting {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             flex-flow: row wrap;
-            width: 65%;
+            //width: 65%;
             margin: 0 auto;
 
             
