--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,8 @@
 @import "top_sections";
 //To do and archival lists
 @import "list_section";
+//Theme button switch style
+@import "theme_btn";
 //Media queries (phone size)
 @import "queries";
 
