--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -19,7 +19,7 @@ body{
     background-color: $bg-beige;
     font-family:$main-font;
     font-size: 16px;
-    color: $mywhite;
+    color: $light-beige; //$mywhite;
     z-index: 0;
 }
 
